Refactor Location to component type in request openapi. Implemented GetRequest in requestwb
